# RegimeIQ

./: .env  .env.example  .gitignore  AGENTS.md  AI.md  CHECKLIST.md  CHECKLIST_REMAINING.md  Dockerfile.etl  LICENSE  README.md  chcklist.md  dashboard.py  docker-compose.yml  dump.rdb  main.py  pyproject.toml  runbook.md  setup.sh
.github/workflows/: api-ci.yml
.understand-anything/: .understandignore
.understand-anything/tmp/: analyze-architecture.js  analyze-files.js  ua-project-scan.js
api/: main.py  server.py
api/core/: __init__.py  logging.py  metrics.py
api/dependencies/: auth.py  rate_limit.py
api/middleware/: __init__.py  csrf.py  https_redirect.py  rate_limit.py  request_id.py  request_logging.py  security_headers.py
api/models/: __init__.py  altdata.py  auth.py  backtest.py  common.py  insights.py  microstructure.py  payment.py  regime.py  symbols.py  users.py
api/routers/: __init__.py  admin.py  altdata.py  auth.py  backtest.py  health.py  insights.py  microstructure.py  payment.py  performance.py  regime.py  symbols.py  users.py
api/routes/: __init__.py  altdata.py  insights.py  microstructure.py  regime.py
api/services/: __init__.py  admin.py  altdata.py  auth.py  backtest.py  factory.py  insights.py  markets.py  microstructure.py  payment.py  regime.py  symbols.py  users.py  websocket.py
core/: __init__.py  cache.py  circuit_breaker.py  config.py  constants.py  database.py  enums.py  redis_bus.py  state.py
deployment/: Dockerfile  docker-compose.yml  nginx.conf
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
frontend/.github/workflows/: ci.yml
frontend/Vektor_Labs/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/Vektor_Labs/src/: App.jsx  index.css  main.jsx
frontend/playwright/: test.registration.spec.js
frontend/playwright-report/: index.html
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/hooks/: useAuth.js  useRegime.js  (+5 more)
frontend/test-results/: .last-run.json
ingestion/: extract.py  load.py  models.py  pipeline.py  transform.py
ingestion/ingestors/: __init__.py  binance_futures.py  binance_ws.py  on_chain.py
migrations/: 001_core_schema.sql  001_users.sql  002_refresh_tokens.sql  003_user_settings.sql  004_user_symbols.sql  005_microstructure_raw.sql  006_regime_states.sql  007_alt_data_signals.sql  008_llm_insights.sql  009_payments.sql  010_backtest_jobs.sql  011_system_config.sql  012_audit_log.sql
modules/altdata/: confluence.py  models.py
modules/llm_reasoner/: models.py  reasoners.py
modules/microstructure/: __init__.py  features.py  manager.py  models.py  order_book.py  spread.py  trade_flow.py
modules/regime/: features.py  hmm.py  models.py  predictor.py  trainer.py
storage/migrations/: 001_schema.sql  002_config.sql  002_futures.sql  003_microstructure.sql  004_beta_codes.sql  005_admin_fix.sql  006_audit_log_fix.sql  007_users_plan_fix.sql  008_users_full_schema.sql  009_user_tables.sql  010_performance_log.sql
tests/: conftest.py
tests/integration/: test_auth.py  test_payment.py  test_regime.py  test_symbols.py  test_websocket.py
tests/unit/: test_jwt.py  test_rate_limit.py  test_validators.py
(+136 files in other folders)
