[project]
name = "vektor-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "aioredis>=2.0.1",
    "alembic>=1.18.4",
    "anthropic>=0.97.0",
    "asyncpg>=0.31.0",
    "asyncpraw>=7.8.1",
    "ccxt>=4.5.51",
    "fastapi>=0.136.1",
    "gunicorn>=25.3.0",
    "hmmlearn>=0.3.3",
    "loguru>=0.7.3",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-client>=0.25.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.27",
    "pytrends>=4.9.2",
    "pyyaml>=6.0.3",
    "redis[hiredis]>=7.4.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sortedcontainers>=2.4.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "statsmodels>=0.14.6",
    "transformers>=5.6.2",
    "uvicorn[standard]>=0.46.0",
    "vectorbt>=0.28.2",
    "websockets>=16.0",
]
